--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Scene Outline]
 Pos=0,24
-Size=383,666
+Size=383,700
 Collapsed=0
 DockId=0x00000003,0
 
@@ -10,7 +10,7 @@ DockId=0x00000005
 
 [Window][Scene View]
 Pos=385,24
-Size=1073,666
+Size=1072,700
 Collapsed=0
 DockId=0x00000005,0
 
@@ -19,18 +19,16 @@ Collapsed=0
 DockId=0x00000005
 
 [Window][Resources]
-Pos=385,24
-Size=1073,666
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x00000005
 
 [Window][Preferences]
 Collapsed=0
 DockId=0x00000005
 
 [Window][Properties]
-Pos=1460,24
-Size=460,666
+Pos=1459,24
+Size=461,700
 Collapsed=0
 DockId=0x00000006,0
 
@@ -41,20 +39,20 @@ Collapsed=0
 DockId=0x00000006
 
 [Window][Asset Browser]
-Pos=0,692
-Size=959,287
+Pos=0,726
+Size=959,301
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Console]
-Pos=961,692
-Size=959,287
+Pos=961,726
+Size=959,301
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Main Window]
 Pos=0,0
-Size=1920,1009
+Size=1920,1057
 Collapsed=0
 
 [Window][Debug##Default]
@@ -73,49 +71,20 @@ Size=649,40
 Collapsed=0
 
 [Window][##legend]
-Pos=385,658
+Pos=385,692
 Size=79,32
 Collapsed=0
 
-[Table][0xF296E818,8]
-RefScale=14
-Column 0  Width=64 Sort=0v
-Column 1  Width=32
-Column 2  Weight=1.0000
-Column 3  Width=69
-Column 4  Width=64
-Column 5  Width=80
-Column 6  Width=120
-Column 7  Weight=1.0000
-
-[Table][0x3BF91E44,5]
-RefScale=14
-Column 0  Width=64 Sort=0v
-Column 1  Width=120
-Column 2  Weight=1.0000
-Column 3  Weight=1.0000
-Column 4  Weight=1.0000
-
-[Table][0x416D30F6,7]
-RefScale=14
-Column 0  Width=64 Sort=0v
-Column 1  Width=32
-Column 2  Weight=1.0000
-Column 3  Weight=1.0000
-Column 4  Weight=1.0000
-Column 5  Weight=1.0000
-Column 6  Weight=1.0000
-
 [Docking][Data]
-DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=0,24 Size=1920,955 Split=Y
-  DockNode      ID=0x00000001 Parent=0xCAA7B907 SizeRef=1920,704 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=383,704 Selected=0x57A23F0C
-    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1535,704 Split=X
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=1073,704 Selected=0x31A92E12
-      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=460,704 Selected=0x199AB496
-  DockNode      ID=0x00000002 Parent=0xCAA7B907 SizeRef=1920,303 Split=X
-    DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=959,303 Selected=0x6F7CD859
-    DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=959,303 Split=X
-      DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=765,303 Selected=0x49278EEE
-      DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=192,303
+DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=0,24 Size=1920,1003 Split=Y
+  DockNode      ID=0x00000001 Parent=0xCAA7B907 SizeRef=1080,502 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=215,502 Selected=0x57A23F0C
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=863,502 Split=X
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=602,502 Selected=0x08AA43A5
+      DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=259,502 Selected=0x199AB496
+  DockNode      ID=0x00000002 Parent=0xCAA7B907 SizeRef=1080,216 Split=X
+    DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=539,216 Selected=0x6F7CD859
+    DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=539,216 Split=X
+      DockNode  ID=0x00000009 Parent=0x00000008 SizeRef=429,216 Selected=0x49278EEE
+      DockNode  ID=0x0000000A Parent=0x00000008 SizeRef=108,216
 
