--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Scene Outline]
 Pos=0,24
-Size=383,700
+Size=383,666
 Collapsed=0
 DockId=0x00000003,0
 
@@ -10,7 +10,7 @@ DockId=0x00000005
 
 [Window][Scene View]
 Pos=385,24
-Size=1073,700
+Size=1073,666
 Collapsed=0
 DockId=0x00000005,0
 
@@ -19,8 +19,10 @@ Collapsed=0
 DockId=0x00000005
 
 [Window][Resources]
+Pos=385,24
+Size=1073,666
 Collapsed=0
-DockId=0x00000005
+DockId=0x00000005,1
 
 [Window][Preferences]
 Collapsed=0
@@ -28,7 +30,7 @@ DockId=0x00000005
 
 [Window][Properties]
 Pos=1460,24
-Size=460,700
+Size=460,666
 Collapsed=0
 DockId=0x00000006,0
 
@@ -39,20 +41,20 @@ Collapsed=0
 DockId=0x00000006
 
 [Window][Asset Browser]
-Pos=0,726
-Size=959,301
+Pos=0,692
+Size=959,287
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Console]
-Pos=961,726
-Size=959,301
+Pos=961,692
+Size=959,287
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Main Window]
 Pos=0,0
-Size=1920,1057
+Size=1920,1009
 Collapsed=0
 
 [Window][Debug##Default]
@@ -75,12 +77,39 @@ Pos=385,658
 Size=79,32
 Collapsed=0
 
+[Table][0xF296E818,8]
+RefScale=14
+Column 0  Width=64 Sort=0v
+Column 1  Width=32
+Column 2  Weight=1.0000
+Column 3  Width=69
+Column 4  Width=64
+Column 5  Width=80
+Column 6  Width=120
+Column 7  Weight=1.0000
+
+[Table][0x3BF91E44,5]
+RefScale=14
+Column 0  Width=64 Sort=0v
+Column 1  Width=120
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+
+[Table][0xCA027FE3,5]
+RefScale=14
+Column 0  Width=32 Sort=0v
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+
 [Docking][Data]
-DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=0,24 Size=1920,1003 Split=Y
+DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=0,24 Size=1920,955 Split=Y
   DockNode      ID=0x00000001 Parent=0xCAA7B907 SizeRef=1920,704 Split=X
     DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=383,704 Selected=0x57A23F0C
     DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1535,704 Split=X
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=1073,704 Selected=0x08AA43A5
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=1073,704 Selected=0x31A92E12
       DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=460,704 Selected=0x199AB496
   DockNode      ID=0x00000002 Parent=0xCAA7B907 SizeRef=1920,303 Split=X
     DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=959,303 Selected=0x6F7CD859
