--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,13 @@
 {
     "compilerOptions": {
-        "module": "ES2015",
+        "module": "ES2016",
         "moduleResolution": "node",
-        "target": "ES2015",
+        "target": "ES2016",
         "lib": [
-            "ES2017",
-            "dom"
+            "ES2016",
+            "ES5",
+            "ES6",
+            "DOM"
         ]
     }
 }
