--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 *.blend1 filter=lfs diff=lfs merge=lfs -text
 *.basis filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
+*.mp3 filter=lfs diff=lfs merge=lfs -text
