Create the base of the texture information system

--- a/.editor/imgui.ini
+++ b/.editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Scene Outline]
 Pos=0,24
-Size=317,700
+Size=317,679
 Collapsed=0
 DockId=0x00000003,0
 
@@ -10,7 +10,7 @@ DockId=0x00000005
 
 [Window][Scene View]
 Pos=319,24
-Size=1114,700
+Size=1114,679
 Collapsed=0
 DockId=0x00000005,0
 
@@ -20,7 +20,7 @@ DockId=0x00000005
 
 [Window][Resources]
 Pos=319,24
-Size=1114,700
+Size=1114,679
 Collapsed=0
 DockId=0x00000005,1
 
@@ -30,7 +30,7 @@ DockId=0x00000005
 
 [Window][Properties]
 Pos=1435,24
-Size=485,700
+Size=485,679
 Collapsed=0
 DockId=0x00000006,0
 
@@ -38,26 +38,26 @@ DockId=0x00000006,0
 Collapsed=0
 
 [Window][Project Settings]
-Pos=1460,24
-Size=460,666
+Pos=1435,24
+Size=485,679
 Collapsed=0
 DockId=0x00000006,1
 
 [Window][Asset Browser]
-Pos=0,726
-Size=1229,301
+Pos=0,705
+Size=1229,292
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Console]
-Pos=1231,726
-Size=689,301
+Pos=1231,705
+Size=689,292
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Main Window]
 Pos=0,0
-Size=1920,1057
+Size=1920,1027
 Collapsed=0
 
 [Window][Debug##Default]
@@ -76,7 +76,7 @@ Size=649,40
 Collapsed=0
 
 [Window][##legend]
-Pos=319,692
+Pos=319,671
 Size=79,32
 Collapsed=0
 
@@ -89,7 +89,7 @@ Collapsed=0
 RefScale=14
 Column 0  Width=64
 Column 1  Width=32
-Column 2  Weight=1.0000
+Column 2  Width=147
 Column 3  Width=48
 Column 4  Width=43
 Column 5  Width=80
@@ -121,7 +121,7 @@ Column 2  Weight=1.0000
 RefScale=14
 Column 0  Width=64
 Column 1  Width=88
-Column 2  Weight=1.0000
+Column 2  Width=52
 Column 3  Width=69
 Column 4  Width=256
 Column 5  Width=83
@@ -139,7 +139,7 @@ Column 5  Weight=1.0000
 Column 6  Weight=1.0000
 
 [Docking][Data]
-DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=0,24 Size=1920,1003 Split=Y
+DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=0,24 Size=1920,973 Split=Y
   DockNode      ID=0x00000001 Parent=0xCAA7B907 SizeRef=1920,704 Split=X
     DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=192,704 Selected=0x57A23F0C
     DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=968,704 Split=X
