--- a/.editor/imgui.ini
+++ b/.editor/imgui.ini
@@ -12,7 +12,7 @@ DockId=0x00000005
 Pos=319,24
 Size=1114,700
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000005,1
 
 [Window][Profile]
 Collapsed=0
@@ -20,9 +20,9 @@ DockId=0x00000005
 
 [Window][Resources]
 Pos=319,24
-Size=1114,679
+Size=1114,700
 Collapsed=0
-DockId=0x00000005,1
+DockId=0x00000005,0
 
 [Window][Preferences]
 Collapsed=0
@@ -77,7 +77,7 @@ Collapsed=0
 
 [Window][##legend]
 Pos=319,692
-Size=43,32
+Size=49,32
 Collapsed=0
 
 [Window][Save changes?]
@@ -100,8 +100,8 @@ Column 7  Weight=1.0000
 RefScale=14
 Column 0  Width=64
 Column 1  Width=120
-Column 2  Weight=1.0000
-Column 3  Weight=1.0000
+Column 2  Width=120
+Column 3  Width=277
 Column 4  Weight=1.0000
 
 [Table][0x9362588E,4]
