--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     },
     "dependencies": {
         "@wonderlandengine/api": "^0.9.8",
-        "@wonderlandengine/components": "^0.9.2",
+        "@wonderlandengine/components": "1.0.0-rc.1",
         "gl-matrix": "^3.4.3"
     }
 }
