--- a/.editor/imgui.ini
+++ b/.editor/imgui.ini
@@ -77,7 +77,7 @@ Collapsed=0
 
 [Window][##legend]
 Pos=319,692
-Size=49,32
+Size=90,32
 Collapsed=0
 
 [Window][Save changes?]
@@ -89,7 +89,7 @@ Collapsed=0
 RefScale=14
 Column 0  Width=64
 Column 1  Width=32
-Column 2  Width=147
+Column 2  Weight=1.0000
 Column 3  Width=48
 Column 4  Width=43
 Column 5  Width=80
@@ -100,8 +100,8 @@ Column 7  Weight=1.0000
 RefScale=14
 Column 0  Width=64
 Column 1  Width=120
-Column 2  Width=120
-Column 3  Width=277
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
 Column 4  Weight=1.0000
 
 [Table][0x9362588E,4]
