--- a/.editor/imgui.ini
+++ b/.editor/imgui.ini
@@ -22,7 +22,7 @@ DockId=0x00000005
 Pos=319,24
 Size=1114,700
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000005,1
 
 [Window][Preferences]
 Collapsed=0
@@ -77,7 +77,7 @@ Collapsed=0
 
 [Window][##legend]
 Pos=319,692
-Size=79,32
+Size=116,32
 Collapsed=0
 
 [Window][Save changes?]
@@ -143,7 +143,7 @@ DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=0,24 Size=1920,1003 Split=Y
   DockNode      ID=0x00000001 Parent=0xCAA7B907 SizeRef=1920,704 Split=X
     DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=192,704 Selected=0x57A23F0C
     DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=968,704 Split=X
-      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=673,704 Selected=0x08AA43A5
+      DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=673,704 Selected=0x31A92E12
       DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=293,704 Selected=0x199AB496
   DockNode      ID=0x00000002 Parent=0xCAA7B907 SizeRef=1920,303 Split=X
     DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=743,303 Selected=0x6F7CD859
