Menu panels are now accessible from arm buttons

--- a/.editor/imgui.ini
+++ b/.editor/imgui.ini
@@ -20,7 +20,7 @@ DockId=0x00000005
 
 [Window][Resources]
 Pos=319,24
-Size=1114,700
+Size=1114,666
 Collapsed=0
 DockId=0x00000005,1
 
@@ -71,7 +71,7 @@ Size=960,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=324,77
+Pos=319,72
 Size=649,40
 Collapsed=0
 
@@ -89,7 +89,7 @@ Collapsed=0
 RefScale=14
 Column 0  Width=64
 Column 1  Width=32
-Column 2  Weight=1.0000
+Column 2  Width=147
 Column 3  Width=48
 Column 4  Width=43
 Column 5  Width=80
@@ -100,8 +100,8 @@ Column 7  Weight=1.0000
 RefScale=14
 Column 0  Width=64
 Column 1  Width=120
-Column 2  Weight=1.0000
-Column 3  Weight=1.0000
+Column 2  Width=120
+Column 3  Width=48
 Column 4  Weight=1.0000
 
 [Table][0x9362588E,4]
@@ -121,22 +121,37 @@ Column 2  Weight=1.0000
 RefScale=14
 Column 0  Width=64
 Column 1  Width=88
-Column 2  Weight=1.0000
+Column 2  Width=52
 Column 3  Width=69
 Column 4  Width=256
 Column 5  Width=83
 Column 6  Width=67
 Column 7  Weight=1.0000
 
-[Table][0x416D30F6,7]
+[Table][0x416D30F6,5]
 RefScale=14
 Column 0  Width=64
 Column 1  Width=103
-Column 2  Weight=1.0000
-Column 3  Weight=1.0000
+Column 2  Width=58
+Column 3  Width=177
 Column 4  Weight=1.0000
+
+[Table][0xCA027FE3,5]
+RefScale=14
+Column 0  Width=23
+Column 1  Width=256
+Column 2  Width=120
+Column 3  Width=120
+Column 4  Weight=1.0000
+
+[Table][0x5EFC2FF2,6]
+RefScale=14
+Column 0  Width=23
+Column 1  Width=256
+Column 2  Width=120
+Column 3  Width=120
+Column 4  Width=29
 Column 5  Weight=1.0000
-Column 6  Weight=1.0000
 
 [Docking][Data]
 DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=0,24 Size=1920,1003 Split=Y
