--- a/.editor/imgui.ini
+++ b/.editor/imgui.ini
@@ -20,7 +20,7 @@ DockId=0x00000005
 
 [Window][Resources]
 Pos=319,24
-Size=1114,666
+Size=1114,700
 Collapsed=0
 DockId=0x00000005,1
 
@@ -71,13 +71,13 @@ Size=960,600
 Collapsed=0
 
 [Window][##toolbar]
-Pos=319,72
+Pos=324,77
 Size=649,40
 Collapsed=0
 
 [Window][##legend]
 Pos=319,692
-Size=79,32
+Size=74,32
 Collapsed=0
 
 [Window][Save changes?]
@@ -89,7 +89,7 @@ Collapsed=0
 RefScale=14
 Column 0  Width=64
 Column 1  Width=32
-Column 2  Width=147
+Column 2  Weight=1.0000
 Column 3  Width=48
 Column 4  Width=43
 Column 5  Width=80
@@ -100,8 +100,8 @@ Column 7  Weight=1.0000
 RefScale=14
 Column 0  Width=64
 Column 1  Width=120
-Column 2  Width=120
-Column 3  Width=48
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
 Column 4  Weight=1.0000
 
 [Table][0x9362588E,4]
@@ -121,7 +121,7 @@ Column 2  Weight=1.0000
 RefScale=14
 Column 0  Width=64
 Column 1  Width=88
-Column 2  Width=52
+Column 2  Weight=1.0000
 Column 3  Width=69
 Column 4  Width=256
 Column 5  Width=83
