Create and intergate the save panel

--- a/.editor/imgui.ini
+++ b/.editor/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Scene Outline]
 Pos=0,24
-Size=317,666
+Size=317,700
 Collapsed=0
 DockId=0x00000003,0
 
@@ -10,7 +10,7 @@ DockId=0x00000005
 
 [Window][Scene View]
 Pos=319,24
-Size=1114,666
+Size=1114,700
 Collapsed=0
 DockId=0x00000005,0
 
@@ -30,7 +30,7 @@ DockId=0x00000005
 
 [Window][Properties]
 Pos=1435,24
-Size=485,666
+Size=485,700
 Collapsed=0
 DockId=0x00000006,0
 
@@ -44,20 +44,20 @@ Collapsed=0
 DockId=0x00000006,1
 
 [Window][Asset Browser]
-Pos=0,692
-Size=860,287
+Pos=0,726
+Size=860,301
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Console]
-Pos=862,692
-Size=1058,287
+Pos=862,726
+Size=1058,301
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Main Window]
 Pos=0,0
-Size=1920,1009
+Size=1920,1057
 Collapsed=0
 
 [Window][Debug##Default]
@@ -76,13 +76,18 @@ Size=649,40
 Collapsed=0
 
 [Window][##legend]
-Pos=319,658
-Size=79,32
+Pos=319,692
+Size=74,32
 Collapsed=0
 
 [Window][Save changes?]
 Pos=944,508
 Size=32,40
+Collapsed=0
+
+[Window][Texture Overlay]
+Pos=60,60
+Size=271,169
 Collapsed=0
 
 [Table][0xF296E818,8]
@@ -128,14 +133,6 @@ Column 5  Width=83
 Column 6  Width=67
 Column 7  Weight=1.0000
 
-[Table][0x416D30F6,5]
-RefScale=14
-Column 0  Width=64
-Column 1  Width=103
-Column 2  Width=58
-Column 3  Width=177
-Column 4  Weight=1.0000
-
 [Table][0xCA027FE3,5]
 RefScale=14
 Column 0  Width=23
@@ -153,8 +150,16 @@ Column 3  Width=120
 Column 4  Width=29
 Column 5  Weight=1.0000
 
+[Table][0x416D30F6,5]
+RefScale=14
+Column 0  Width=64
+Column 1  Width=103
+Column 2  Width=58
+Column 3  Width=177
+Column 4  Weight=1.0000
+
 [Docking][Data]
-DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=0,24 Size=1920,955 Split=Y
+DockSpace       ID=0xCAA7B907 Window=0x8FE86BE8 Pos=0,24 Size=1920,1003 Split=Y
   DockNode      ID=0x00000001 Parent=0xCAA7B907 SizeRef=1920,704 Split=X
     DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=192,704 Selected=0x57A23F0C
     DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=968,704 Split=X
