--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "esbuild": "^0.15.18"
     },
     "dependencies": {
-        "@wonderlandengine/api": "^0.9.8",
-        "@wonderlandengine/components": "1.0.0-rc.1",
+        "@wonderlandengine/api": "1.0.0",
+        "@wonderlandengine/components": "1.0.3",
         "gl-matrix": "^3.4.3"
     }
 }
